fix vertical thumbnail spacing

--- a/themes/pr0booru/style.css
+++ b/themes/pr0booru/style.css
@@ -428,4 +428,6 @@ div#dlimg:hover {
 	color: white;
 }
 
-
+.shm-image-list .thumb {
+	margin-bottom: 5px;
+}
